--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
     background: #4D179a;
 }
 
+.home-heading {
+    margin: 0 auto;
+}
+
 .back-button {
     display: inline-flex;
     align-items: center;
