--- a/style.css
+++ b/style.css
@@ -191,6 +191,10 @@ h1 {
         padding: 0 5px;
     }
 
+    .back-button {
+        margin-bottom: 1rem;
+    }
+
     h1 {
         font-size: 1.5rem;
     }
